--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,11 @@
 
 html, body, :global(#root) {
-  height: 100%;
+  height: 100vh;
+  border:.1px solid transparent;
+  box-sizing: border-box;
 }
-
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Hannotate SC;
+}
